prusti-tests/tests/verify_overflow/ui/counterexamples/pure-function-2.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/pure-function-2.rs:30:5
   |
30 |     assert!(z == baz(y).a)
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/pure-function-2.rs:30:5
   |
30 |     assert!(z == baz(y).a)
   |     ^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   2
  --> $DIR/pure-function-2.rs:26:9
   |
26 | fn test(x: i32, y: X) {
   |         ^
note: counterexample for "y"
       value:   X {
            a: 5,
        }
  --> $DIR/pure-function-2.rs:26:17
   |
26 | fn test(x: i32, y: X) {
   |                 ^
note: counterexample for "y"
       value:   X {
            a: 5,
        }
  --> $DIR/pure-function-2.rs:29:13
   |
29 |     let z = y.get_a();
   |             ^
note: counterexample for "z"
       value:   5
  --> $DIR/pure-function-2.rs:29:13
   |
29 |     let z = y.get_a();
   |             ^^^^^^^^^
note: counterexample for "get_a()"
       value:   5
  --> $DIR/pure-function-2.rs:29:13
   |
29 |     let z = y.get_a();
   |             ^^^^^^^^^
note: counterexample for "baz()"
       value:   X {
            a: 6,
        }
  --> $DIR/pure-function-2.rs:30:18
   |
30 |     assert!(z == baz(y).a)
   |                  ^^^^^^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

